# motor_controller

./: .editorconfig  .gitignore  .gitmodules  README.md
hello_world/: CMakeLists.txt
hello_world/include/: external.h
hello_world/pio/: pio_setup.h  trigger.pio
hello_world/src/: f9p_i2c.hpp  i2c_setup.hpp  interface_usb.hpp  leds.hpp  main.c  main.cpp  old.cpp  pio_setup.hpp  pwm_setup.hpp  setup_pio.hpp  setup_pwm.hpp  setup_uart.hpp  setup_usb.hpp  stim_setup.hpp  stim_uart.hpp  trigger_pio.hpp  trigger_pwm.hpp  usb_setup.hpp
ins_link/: CMakeLists.txt
ins_link/pio/: selecter.pio  selecter_variant.pio  trigger.pio
ins_link/src/: leds.hpp  main.cpp  timer.hpp
ins_link_old/: blink.c  core1.c  core1.h  header.h  ins.c  selecter.pio  spi_slave.c  trigger.pio
motor_controller/: CMakeLists.txt  piofix.py
navbox/: CMakeLists.txt  stim_settings.txt
navbox/pio/: invert.pio  trigger copy.pio  trigger.pio  uart.pio
navbox/src/: button.hpp  dma_handler.hpp  interface_usb.hpp  inverter_pio.hpp  leds.hpp  main.cpp  queues.hpp  stim_uart.hpp  trigger_pio.hpp  trigger_pwm.hpp  uart_pio.hpp
pps_sim/: CMakeLists.txt
pps_sim/src/: main.cpp
pytools/: run.py  run_navbox.py  stim_config.py  thing.py  usblink.py  windows_link.py  windows_link_old.py  wsl_link.py
pytools/sdreader/: read_sd.py  sdparser.py
pytools/windows/: windows_link.py  windows_terminal.py  wtools.py
run/: run.py
src/: CMakeLists.txt  flasher.py  main.c  motor.c  piofix.py
src/pio/: encoder.h  encoder.pio  encoder_ts.pio  pwm.pio  pwm_loop.pio  selecter.pio  selecter_variant.pio  trigger.pio
stim_config/: CMakeLists.txt
stim_config/src/: interface_usb.hpp  inverter_pio.hpp  leds.hpp  main.cpp
tracker_box/: CMakeLists.txt  OLA_settings.txt
tracker_box/pio/: trigger.pio  uart.pio
tracker_box/src/: f9p_i2c.hpp  hw_config.cpp  leds.hpp  log_uart.hpp  main.cpp  mpu6050.hpp  trigger_pio.hpp  uart_pio.hpp
usefull_stuff/: regex.c
